--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
@@ -46,7 +46,7 @@
                               </Group>
                               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="enterpriseIdTextField" max="32767" attributes="0"/>
+                                  <Component id="locationTextField" max="32767" attributes="0"/>
                                   <Component id="phoneTextField" max="32767" attributes="0"/>
                                   <Component id="emailTextField" alignment="0" pref="200" max="32767" attributes="0"/>
                               </Group>
@@ -110,7 +110,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="enterpriseIdTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="locationTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -257,10 +257,10 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Enterprise Id"/>
+        <Property name="text" type="java.lang.String" value="Location"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="enterpriseIdTextField">
+    <Component class="javax.swing.JTextField" name="locationTextField">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
